--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
                     <h1>NuCamp</h1>
                     <h2>a better way to camp</h2>
                 </div>
+                <div class=" col-md-4 col-xl-2 mt-4">
+                    <a href="#reserveForm" class="text-nowrap">
+                        <button class="btn-lg bg-info btn text-white">Reserve Campsite</button>
+                    </a>    
+                </div>
             </div>
         </div>
     </header>
@@ -52,8 +57,7 @@
     </nav>
 
     <div class="container">
-        <div class="row row-content 
-        align-items-center">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Discover & Review</h2>
             </div>
@@ -68,19 +72,22 @@
             </div>
         </div>
 
-        <div class="row row-content 
-        align-items-center">
+        <div class="row row-content align-items-center">
             <div class="col-sm-4 col-md-3">
                 <h2>Featured Campsites</h2>
             </div>
             <div class="col">
-                <h3>React Lake Campground</h3>
-        		<p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                <div class="media">
+                    <div class="media-body align-self-center">
+                        <h3>React Lake Campground</h3>
+                        <p class="d-none d-sm-block">Nestled in the foothills of the Chrome Mountains, this campground on the shores of the pristine React Lake is a favorite for fly fishers.</p>
+                    </div>  
+                    <img src="img/react-lake-thumb.jpg" class="img-thumbnail d-flex ml-3"/> 
+                </div>
    			</div>
         </div>
 
-        <div class="row row-content 
-        align-item-center">
+        <div class="row row-content align-item-center">
             <div class="col-sm-4 order-sm-last col-md-3">
                 <h2 class="text-sm-right">Our Community Partners</h2>
             </div>
@@ -92,6 +99,47 @@
         				<p class="d-none d-sm-block">Bootstrap Outfitters supplies you with gear you need at prices you can't beat.</p>
                     </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    <div class="row row-content align-item-center">
+        <div class="col-sm-6 mx-auto">
+            <div class="card">
+                <div class="card-header text-white bg-info">
+                    <h3>Reserve a Campsite</h3>
+                </div>
+                    <div class="card-body">
+                        <form action="" id="reserveForm">
+                            <div class="row form-group" >
+                                
+                                <label class="col-sm-6 col-form-label" for="numberOfCampers">Number of Campers</label>
+
+                                <div class="col">
+                                    <select class="custom-select" name="numberOfCampers" id="numberOfCampers">
+                                        <option value="#">Select</option>
+                                        <option value="1">1</option>
+                                        <option value="2">2</option>
+                                        <option value="3">3</option>
+                                        <option value="4">4</option>
+                                        <option value="5">5</option>
+                                        <option value="6">6</option>
+                                    </select>  
+                                </div>      
+                            </div>
+                            <div class="row form-group">
+                                <label class="col-sm-6 col-form-label" for="date">Date</label>
+                                <div class="col">
+                                        <input class="form-control" type="date" id="date" name="date">
+                                </div>
+                            </div>   
+                            <div class="row form-group">
+                                <div class='col'>
+                                    <button class="btn btn-primary" type="submit">Search</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>   
             </div>
         </div>
     </div>
